--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fine-today.github.io/react_page",
+  "homepage": "https://fine-today.github.io/redux-toolkit",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-brands-svg-icons": "^6.1.2",
